add  fading rings effect

--- a/style.css
+++ b/style.css
@@ -54,4 +54,50 @@ div {
 
 /* Faded rings effect */
 
+.fading-ring {
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    overflow: hidden;
+}
+
+.rings {
+    background-color: white;
+    border-radius: 50%;
+    border-color: transparent;
+    height: inherit;
+    width: 100%;
+    animation: pulse 3s linear infinite;
+    
+}
+
+@keyframes pulse {
+    from {
+        transform: scale(0);
+        opacity: .2;
+    } to { 
+        transform: scale(1);
+        opacity: 0;
+    }
+} 
+
+.ring-5 {
+    animation-delay: .2s;
+}
+
+.ring-4 {
+    animation-delay: .4s;
+}
+
+.ring-3 {
+    animation-delay: .6s;
+}
+
+.ring-2 {
+    animation-delay: .8s;
+}
+
+.ring-1 {
+    animation-delay: 1s;
+}
 
